tests/rosetta/out/Rust/csv-to-html-translation-5.error
rustc: exit status 1
error[E0308]: mismatched types
  --> /tmp/csv-to-html-translation-5.rs:39:23
   |
39 |     for line in split(c, "
   |                 ----- ^ expected `&str`, found `String`
   |                 |
   |                 arguments to this function are incorrect
   |
note: function defined here
  --> /tmp/csv-to-html-translation-5.rs:3:8
   |
3  |     fn split(s: &'static str, sep: &'static str) -> Vec<&'static str> {
   |        ^^^^^ ---------------
help: consider borrowing here
   |
39 |     for line in split(&c, "
   |                       +

error[E0308]: mismatched types
 --> /tmp/csv-to-html-translation-5.rs:9:35
  |
9 |             if &s[i as usize..i + n as usize] == sep {
  |                                   ^^^^^^^^^^ expected `i32`, found `usize`

error[E0308]: mismatched types
 --> /tmp/csv-to-html-translation-5.rs:9:31
  |
9 |             if &s[i as usize..i + n as usize] == sep {
  |                               ^^^^^^^^^^^^^^ expected `usize`, found `i32`

error[E0277]: cannot add `usize` to `i32`
 --> /tmp/csv-to-html-translation-5.rs:9:33
  |
9 |             if &s[i as usize..i + n as usize] == sep {
  |                                 ^ no implementation for `i32 + usize`
  |
  = help: the trait `Add<usize>` is not implemented for `i32`
  = help: the following other types implement trait `Add<Rhs>`:
            `&i32` implements `Add<i32>`
            `&i32` implements `Add`
            `i32` implements `Add<&i32>`
            `i32` implements `Add`

error[E0308]: mismatched types
  --> /tmp/csv-to-html-translation-5.rs:24:41
   |
24 |             let ch = &s[i as usize..i + 1 as usize];
   |                                         ^^^^^^^^^^ expected `i32`, found `usize`

error[E0308]: mismatched types
  --> /tmp/csv-to-html-translation-5.rs:24:37
   |
24 |             let ch = &s[i as usize..i + 1 as usize];
   |                                     ^^^^^^^^^^^^^^ expected `usize`, found `i32`

error[E0277]: cannot add `usize` to `i32`
  --> /tmp/csv-to-html-translation-5.rs:24:39
   |
24 |             let ch = &s[i as usize..i + 1 as usize];
   |                                       ^ no implementation for `i32 + usize`
   |
   = help: the trait `Add<usize>` is not implemented for `i32`
   = help: the following other types implement trait `Add<Rhs>`:
             `&i32` implements `Add<i32>`
             `&i32` implements `Add`
             `i32` implements `Add<&i32>`
             `i32` implements `Add`

error[E0308]: mismatched types
  --> /tmp/csv-to-html-translation-5.rs:30:16
   |
20 |     fn htmlEscape(s: &'static str) -> &'static str {
   |                                       ------------ expected `&'static str` because of return type
...
30 |         return out;
   |                ^^^ expected `&str`, found `String`
   |
help: consider borrowing here
   |
30 |         return &out;
   |                +

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
